--- a/04 - Number Theory 101.tex
+++ b/04 - Number Theory 101.tex
@@ -290,33 +290,212 @@ $\strut#1$\kern.25em\smash{\raise.3ex\hbox{$\big)$}}$\mkern-8mu
   \end{columns}
 \end{frame}
 
-\begin{frame}{Exercises\hspace*{0.35\textwidth}Challenge Problems}
+\begin{frame}{Divisibility rules for 3 and 9}
   \begin{columns}[T]
-    \begin{column}{0.52\textwidth}
+    \begin{column}{0.5\textwidth}
+      \begin{problem}
+        Is $5479$ divisible by $9$?
+      \end{problem}
+      Let's write a number 5479 as a sum
+      \[ 5472 = 5 \cdot 1000 + 4 \cdot 100 + 7 \cdot 10 + 2. \]
+      And then write $1000$ as a sum $999 + 1$, $100 = 99 + 1$ and $10 = 9 + 1$. So 
+      \begin{multline*}
+        5472 = 5 \cdot (999 + 1) + 4 \cdot (99 + 1) + 7 \cdot (9 + 1) + 9 = \\
+        = 5 \cdot 999 + 5 + 4 \cdot 99 + 4 + 7 \cdot 9 + 7 + 2.
+      \end{multline*}
+      And finally we can realize that $999$, $99$, and $9$ are divisible by $9$. That means that divisibility of $5479$ by $9$ depends on divisibility of sum $5 + 4 + 7 + 2$.
+      \begin{definition}
+        A number is divisible by $9$, if the \textbf{sum of its digits} is divisible by $9$.
+      \end{definition}
+      And since $9$, $99$, $999$, $9999$ and so on is also divisible by $3$, we get
+      \begin{definition}
+        A number is divisible by $3$, if the \textbf{sum of its digits} is divisible by $3$.
+      \end{definition}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+
+      \begin{example}
+        $\overline{abcd}$ is a mathematical notation that a number is written with digits $a$, $b$, $c$, and $d$. So
+        \[ \overline{abcd} = a \cdot 10^3 + b \cdot 10^2 + c \cdot 10 + d. \]
+        This allows us to write the rules as
+        \[
+           \overline{abcd} \equiv a + b + c + d \pmod{9 \text{ or } 3}. 
+        \]
+        \vspace*{-1em}
+      \end{example}\medskip
+
+      The divisibility rule by $9$ allows us quickly check if our arithmetic operations are correct.
+      \[
+        \begin{array}{c}
+        \phantom{\times99}384\\
+        \underline{\times\phantom{999}56}\\
+        \phantom{\times9}2304\\
+        \underline{\phantom\times1820\phantom9}\\
+        \phantom\times20504
+        \end{array}
+      \]
+      Lets see remainders of factors and product
+      \begin{gather*}
+        384 \equiv 6 \Mod{9}, \quad
+        56 \equiv 2 \Mod{9}, \\
+        20504 \equiv 2 \Mod{9}.
+      \end{gather*}
+      But $6 \times 2 \not\equiv 2 \Mod{9}$, so there is an error.
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Divisibility rules for 11}
+  \begin{columns}[T]
+    \begin{column}{0.5\textwidth}
+      The divisibility rules for $9$ and $3$ works because $10$, $100$, $1{,}000$, and so on are all divisible by $9$ with remainder $1$. But what about $11$?
+      \[ 1\underbrace{00\ldots 0}_\text{even zeros} - 1 = \underbrace{99 \ldots 9}_\text{even nines} \]
+      is divisible by $11$ because it is sum of
+      \[ 99\ 99\ \ldots 99 = 99\cdot 10^n + \ldots + 99 \] which all are divisible by $11$.
+
+      From other hand
+      \[ 1\underbrace{00\ldots 0}_\text{odd zeros} + 1 = \underbrace{99\ldots 9}_\text{even nines}0 + 11 \]
+      is also divisible by $11$.
+
+      \begin{problem}
+        Is $3432$ divisible by $11$?
+      \end{problem}
+      \vspace*{-1em}
+      \begin{multline*}
+        3432 = 3 \cdot 1000 + 4 \cdot 100 + 3 \cdot 10 + 2 = \\
+        = 3 \cdot (1001 - 1) + 4 \cdot (99 + 1) + 3 \cdot (11 - 1) + 2 \equiv \\
+        \text{when we get rid of all multiples of 11} \\
+        \equiv -3 + 4 - 3 + 2 = 0 \Mod{11}.
+      \end{multline*}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      As we see, our final computation is the digits of the number with alternate signs.
+      \begin{definition}
+        A number is divisible by $11$ if the \textbf{difference} between the \textbf{sum of the odd-place digits} and the \textbf{sum of the even-place digits} is $0$ or a multiple~of~$11$.
+      \end{definition}\medskip
+
+      The combinations of the divisibility rules may also create additional divisibility rules. 
+
+      For example to check if number is divisible by $6$ we may check if it divisible by $2$ and $3$. This will works when the divisor may be split in product of 
+      \begin{wrapfigure}{l}{0.4\textwidth}
+        \vspace*{-0.8em}
+        \includegraphics[width=0.43\textwidth]{01 - Modular arithmetic/collab.png}
+      \end{wrapfigure}
+      \textbf{coprime}\footnotemark\ factors. 
+      But the rule will not work for example for $27 = 9 \times 3$, since testing for~$9$ we already testing for $3$.
+      \vspace*{2.5em}
+      \hrule
+      \vspace*{2pt}
+      {\footnotesize \textsuperscript{1}\emph{coprime numbers are numbers without common divisors.}}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}{Summary of the divisibility rules}
+  \begin{columns}[T]
+    \begin{column}{0.5\textwidth}
+      An integer number $n$ is divisible by
       \begin{enumerate}
-        \item What is the only whole number that is not included in the set of counting numbers?
-        \item What is the prime factorization of $144$?
-        \item What is the prime factorization of $2021$?
-        \item What is the $\gcd(5040,\ 6125)$?
-        \item What is the $\lcm(484,\ 330)$?
-        \item Larry goes shopping every $3$ days, Moe goes shopping every $4$ days, and Curly goes shopping every $5$ days.  If they all go shopping together on a Sunday, what is the first day of the week they could go shopping together again?
-        \item In a video game, red aliens are worth $7$ points and blue aliens are worth $9$ points.  What is the highest score that can’t be obtained by capturing only red or blue aliens?
-        \item What are the GCD and LCM of $1183$ and $3458$? \emph{The Euclidean Algorithm may be useful here.}
+        \item[\textbf{2.}] if the \emph{last digit of $n$ is divisible by $2$}, e.g. is equal to $0$, $2$, $4$, $6$, or $8$;
+        \item[\textbf{3.}] if the \emph{sum of digits of $n$ is divisible by $3$};
+        \item[4.] if the \emph{last two digits of $n$ is divisible by $4$}.\item[\textbf{5.}] if the \emph{last digit of $n$ is divisible by $5$}, e.g. is equal to $0$ or $5$;
+        \item[6.] if $n$ is divisible by both $2$ and $3$;
+        \item[\textbf{7.}] if \emph{subtracting twice the last digit of $n$ from the remaining digits} gives a multiple of $7$;
+        \item[8.] if the \emph{last three digits of $n$ is divisible by $8$};
+        \item[9.] if the \emph{sum of digits of $n$ is divisible by $9$};
+        \item[10.] if $n$ is divisible by both $2$ and $5$;
+        \item[\textbf{11.}] if the \emph{difference of the alternating sum of digits of $n$} is a multiple of $11$;
+        \item[12.] if $n$ is divisible by both $3$ and $4$.
       \end{enumerate}
     \end{column}
-    \begin{column}{0.48\textwidth}
+    \begin{column}{0.5\textwidth}
+      {\small
+      You might notice the strange divisibility rule for $7$. The proof of this rule is not straightforward as for all other. 
+      
+      Let's write $n = a\cdot 10 + b$, where $b$ is the last digit and $a$ is the number build with remaining digits. Then suppose $n$ is divisible by $7$
+      \begin{align*}
+        a \cdot 10 + b &\equiv 0 \pmod{7}, \text{ multiply all by $2$}\\
+        a \cdot 20 + b \cdot 2 &\equiv 0 \pmod{7}, \text{ subtract $21a$}\\
+        a \cdot (-1) + b \cdot 2 &\equiv 0 \pmod{7}, \text{ multiply by $-1$}\\
+        a - b \cdot 2 &\equiv 0 \pmod{7}.
+      \end{align*}
+      Doing the same operations in reverse order, we can get the divisibility rule for $7$. This is possible because $2$ and $-1$ are \emph{coprime} with $7$. 
+      
+      The rule may be repeated several times to get a number small enough for the direct check.
+
+      Similar divisibility rules may be obtained for other primes}
+
       \begin{enumerate}
-        \item What is the largest integer that can’t be expressed as the sum of integer multiples of $5$, $7$, $8$?
+        \item[\textbf{13.}] if \emph{adding $4$ times the last digit of $n$ to the remaining digits} gives a multiple of $13$;
+        \item[\textbf{17.}] if \emph{subtracting $5$ times the last digit of $n$ from the remaining digits} gives a multiple of $17$.
+      \end{enumerate}
 
-        \item Find the smallest positive integer which when divided by $12$ leaves a remainder of $11$, when divided by $11$ leaves a remainder of $10$, when divided by $10$ leaves a~remainder of $9$, etc. down to where, when divided by $2$, it leaves a remainder of $1$.
+      {\small But these rules aren't simpler than divide by the number.}
+    \end{column}
+  \end{columns}
+\end{frame}
 
-        \item Find the smallest positive integer greater than $1$ which yields a remainder of $1$ when divided by any single digit positive integer greater than $1$.
+% \begin{frame}{Exercises\hspace*{0.35\textwidth}Challenge Problems}
+%   \begin{columns}[T]
+%     \begin{column}{0.52\textwidth}
+%       \begin{enumerate}
+%         \item What is the only whole number that is not included in the set of counting numbers?
+%         \item What is the prime factorization of $144$?
+%         \item What is the prime factorization of $2021$?
+%         \item What is the $\gcd(5040,\ 6125)$?
+%         \item What is the $\lcm(484,\ 330)$?
+%         \item Larry goes shopping every $3$ days, Moe goes shopping every $4$ days, and Curly goes shopping every $5$ days.  If they all go shopping together on a Sunday, what is the first day of the week they could go shopping together again?
+%         \item In a video game, red aliens are worth $7$ points and blue aliens are worth $9$ points.  What is the highest score that can’t be obtained by capturing only red or blue aliens?
+%         \item What are the GCD and LCM of $1183$ and $3458$? \emph{The Euclidean Algorithm may be useful here.}
+%       \end{enumerate}
+%     \end{column}
+%     \begin{column}{0.48\textwidth}
+%       \begin{enumerate}
+%         \item What is the largest integer that can’t be expressed as the sum of integer multiples of $5$, $7$, $8$?
+
+%         \item Find the smallest positive integer which when divided by $12$ leaves a remainder of $11$, when divided by $11$ leaves a remainder of $10$, when divided by $10$ leaves a~remainder of $9$, etc. down to where, when divided by $2$, it leaves a remainder of $1$.
+
+%         \item Find the smallest positive integer greater than $1$ which yields a remainder of $1$ when divided by any single digit positive integer greater than $1$.
         
-        \item Prove that $\gcd(a,\ b) \times \lcm(a,\ b) = a \times b$.
+%         \item Prove that $\gcd(a,\ b) \times \lcm(a,\ b) = a \times b$.
+%       \end{enumerate}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
+
+\begin{frame}{Exercises\hspace*{0.35\textwidth}Challenge Problems}
+  \begin{columns}[T]
+    \begin{column}{0.5\textwidth}
+      \begin{enumerate}
+        \item What is the remainder when $301 \times 349$ is divided by $9$?
+        \item Find the GCD and LCM of $42$ and $98$.
+        \item The GCD of two numbers $A$ and $B$ is $7$. What are possible values of GCD of $15 \cdot A$ and $35 \cdot B$?
+        \item The numbers $6545$ can be written as the product of a pair of positive two-digit integers. What are these two integers?
+        \item What is the smallest prime factor of $11^7 + 7^5$?
+        \item The four digit number $A55B$ is divisible by $36$. What is the sum of $A$ and $B$?
+        \item What is the sum of the digits of $\dfrac{10^{25}+8}{9}$?
+        \item Find the GCD of $2n+13$ and $n+7$ by Euclid's algorithm.
+      \end{enumerate}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \begin{enumerate}
+        \item The positive integers $A$, $B$, $A-B$, and $A+B$ are all prime numbers. What is the sum of these four primes?
+        \item Show that every prime greater than $3$ must be of the form $6n+1$ or $6n-1$ for a positive integer $n$.
+        \item If $p$, $q$ and $r$ are prime numbers such that their product is $19$ times their sum, find $p^2 + q^2 + r^2$.
+        \item Let $a$, $b$, $c$, and $d$ be positive integers such that $\gcd(a,\ b)=24$, $\gcd(b,\ c)=36$, $\gcd(c,\ d)=54$, and $70<\gcd(d,\ a)<100$. Which of the following must be a divisor of $a$: $5$, $7$, $11$, $13$, or $17$? 
       \end{enumerate}
     \end{column}
   \end{columns}
 \end{frame}
+
+% \begin{frame}{Title}
+%   \begin{columns}[T]
+%     \begin{column}{0.5\textwidth}
+%     \end{column}
+%     \begin{column}{0.5\textwidth}
+%     \end{column}
+%   \end{columns}
+% \end{frame}
 
 % \begin{frame}{Title}
 %   \begin{columns}[T]
